# prime-ir

./: .bazelrc  .bazelrc.ci  .clang-format  .codespellrc  .fractal-commit-lint.toml  .gitignore  .gitmessage  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE.bazel  a.mlir  a.txt  dev.md  requirements-dev.txt  requirements.in  requirements_lock_3_11.txt
benchmark/binary_field/: BUILD.bazel  bf8_arm.mlir  bf8_baseline.mlir  bf8_x86.mlir  bf_arm.mlir  bf_arm_polyval.mlir  bf_baseline.mlir  bf_x86.mlir  binary_field_benchmark.cc
benchmark/gpu/msm/: BUILD.bazel  msm_benchmark.cc  msm_cpu.mlir  msm_cpu.mlir.template  msm_gpu.mlir  msm_gpu.mlir.template
benchmark/gpu/vecops/: BUILD.bazel  vecops_benchmark.cc  vecops_cpu.mlir  vecops_cpu.mlir.template  vecops_gpu.mlir  vecops_gpu.mlir.template
benchmark/mod_arith/: BUILD.bazel  mul_benchmark.mlir  mul_benchmark_test.cc
benchmark/msm/: BUILD.bazel  benchmark.cc  gpu_msm_benchmark.mlir  gpu_msm_benchmark_test.cc  msm_benchmark.mlir  msm_benchmark.mlir.template  msm_benchmark_test.cc
benchmark/ntt/: BUILD.bazel  README.md  ntt_benchmark.mlir  ntt_benchmark.mlir.template  ntt_benchmark_test.cc
benchmark/poseidon2/: BUILD.bazel  poseidon2.mlir  poseidon2_auto_vectorized.mlir  poseidon2_benchmark.cc  poseidon2_packed.mlir
benchmark/vectorize/: BUILD.bazel  vectorize.mlir  vectorize_benchmark.cc  vectorize_ec.mlir  vectorize_ec_benchmark.cc  vectorize_pf.mlir
prime_ir/Runtime/FieldRuntime/: BUILD.bazel
prime_ir/Utils/: APIntUtils.cpp  APIntUtils.h  AdditiveCanonicalization.td  AdditiveGroupCanonicalization.td  AssemblyFormatUtils.cpp  AssemblyFormatUtils.h  BUILD.bazel  BitSerialAlgorithm.cpp  BitSerialAlgorithm.h  BitcastOpUtils.h  BufferizationUtils.h  BuilderContext.h  CanonicalizationPatterns.inc  CommonTraits.td  CommonTypeConstraints.td  ConstantFolder.h  ControlFlowOperation.cpp  ControlFlowOperation.h  ConversionUtils.cpp  ConversionUtils.h  DistributivityCanonicalization.td  FieldCanonicalization.td  FunctionOutlinerBase.h  IntrinsicFunctionGeneratorBase.h  KnownModulus.cpp  KnownModulus.h  LoweringMode.h  MultiplicativeCanonicalization.td  OpUtils.cpp  OpUtils.h  ShapedTypeConverter.cpp  ShapedTypeConverter.h  SimpleStructBuilder.cpp  SimpleStructBuilder.h  ZkDtypes.h
prime_ir/mlir/: BUILD.bazel
prime_ir/mlir/_mlir_libs/: BUILD.bazel
tests/: BUILD.bazel  RuntimeFunctions.cpp  RuntimeFunctions.h  arith_to_mod_arith.mlir  bn254_ec_defs.mlir  bn254_ec_helpers.mlir  bn254_ec_mont_defs.mlir  bn254_ec_mont_helpers.mlir  bn254_ec_mont_utils.mlir  bn254_ec_utils.mlir  bn254_field_defs.mlir  bn254_field_utils.mlir  default_print_utils.mlir  lit.cfg.py  mod_arith.mlir  mod_arith_bn254.mlir  mod_arith_to_arith.mlir  poly_canonicalization.mlir  poly_to_field.mlir  polynomial_syntax.mlir  prime_field_to_mod_arith.mlir  printI256.cpp  testing.md
tests/Dialect/Arith/: arith_to_mod_arith.mlir
tests/Dialect/ArithExt/: BUILD.bazel  packed_arith_runner.mlir
tests/Dialect/EllipticCurve/: BUILD.bazel  CreateZeroPointTest.cpp  ECRoundTripTest.cpp  PointOperationTest.cpp  batch_convert_bn254_runner.mlir  batch_convert_correctness_runner.mlir  bitcast_runner.mlir  bucket_acc_runner.mlir  bucket_reduce_runner.mlir  bufferization.mlir  canonicalize.mlir  canonicalize_after_elliptic_curve_to_field.mlir  ed_extended_canonicalize.mlir  ed_extended_to_field.mlir  elliptic_curve_msm_runner.mlir  elliptic_curve_syntax.mlir  elliptic_curve_to_field.mlir  elliptic_curve_to_field_aot.mlir  elliptic_curve_to_field_runner.mlir  elliptic_curve_to_llvm.mlir  linalg.mlir  memref.mlir  msm_subops_runner.mlir  pairing_check_4pairs_runner.mlir  pairing_check_runner.mlir  pairing_outliner_linkage.mlir  scalar_decomp_runner.mlir  scalar_mul_constant_unrolling.mlir  scalar_mul_intrinsic_mode.mlir  sparse_tensor_runner.mlir  (+2 more)
tests/Utils/: BUILD.bazel  BitSerialAlgorithmTest.cpp  offset_creation_runner.mlir  sort_pairs_runner.mlir
tests/python/: BUILD.bazel  elliptic_curve_test.py  field_test.py
tools/: BUILD.bazel  prime-ir-lsp.cpp  prime-ir-opt.cpp  setup_llvm_clone.sh  tools.bzl  zkir-lsp.cpp  zkir-opt.cpp
utils/cuda/: BUILD.bazel  CudaRuntimeUtils.cu  CudaUtils.h
zkir/Pipelines/: BUILD.bazel  PipelineRegistration.cpp  PipelineRegistration.h
zkir/Utils/: APIntUtils.cpp  APIntUtils.h  AssemblyFormatUtils.cpp  AssemblyFormatUtils.h  BUILD.bazel  BuilderContext.h  CommonTraits.td  CommonTypeConstraints.td  ConstantFolder.h  ControlFlowOperation.cpp  ControlFlowOperation.h  ConversionUtils.cpp  ConversionUtils.h  KnownModulus.cpp  KnownModulus.h  OpUtils.cpp  OpUtils.h  ShapedTypeConverter.cpp  ShapedTypeConverter.h  SimpleStructBuilder.cpp  SimpleStructBuilder.h  ZkDtypes.h
zkx/client/: BUILD.bazel  client.cc  client.h  client_library.cc  client_library.h  compile_only_client.cc  compile_only_client.h  executable_build_options.h  local_client.cc  local_client.h
zkx/ffi/: BUILD.bazel  attribute_map.cc  attribute_map.h  call_frame.cc  call_frame.h  call_frame_unittest.cc  execution_context.cc  execution_context.h  execution_context_unittest.cc  execution_state.cc  execution_state.h  execution_state_unittest.cc  ffi.h  ffi_api.cc  ffi_api.h  ffi_unittest.cc  type_id_registry.cc  type_id_registry.h  type_id_registry_unittest.cc
zkx/pjrt/: BUILD.bazel  event_pool.cc  event_pool.h  host_callback.h  host_memory_spaces.h  layout_mode.cc  local_device_state.cc  local_device_state.h  lru_cache.h  mlir_to_hlo.cc  mlir_to_hlo.h  pjrt_api.cc  pjrt_api.h  pjrt_client.h  pjrt_executable.cc  pjrt_executable.h  pjrt_future.h  pjrt_stream_executor_client.cc  pjrt_stream_executor_client.h  pjrt_stream_executor_client_unittest.cc  raw_buffer.cc  raw_buffer.h  stream_executor_executable.cc  stream_executor_executable.h  tracked_device_buffer.cc  tracked_device_buffer.h  tracked_device_buffer_unittest.cc  transpose.cc  triton.h  triton_stub.cc  utils.cc  utils.h  worker_thread.cc  worker_thread.h
zkx/tools/: BUILD.bazel  hlo_extractor.cc  hlo_extractor.h  hlo_extractor_unittest.cc  hlo_module_loader.cc
(+1432 files in other folders)
