# Copyright 2023 The StableHLO Authors. All Rights Reserved.
# Copyright 2025 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

workspace(name = "prime_ir")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# rules_cc must be declared here, before zk_dtypes()' python_init_rules() —
# Bazel http_archive resolution is first-wins.
http_archive(
    name = "bazel_features",
    sha256 = "9390b391a68d3b24aef7966bce8556d28003fe3f022a5008efc7807e8acaaf1a",
    strip_prefix = "bazel_features-1.36.0",
    urls = ["https://github.com/bazel-contrib/bazel_features/archive/refs/tags/v1.36.0.tar.gz"],
)

load("@bazel_features//:deps.bzl", "bazel_features_deps")

bazel_features_deps()

http_archive(
    name = "rules_cc",
    sha256 = "472ddca8cec1e64ad78e4f0cabbec55936a3baddbe7bef072764ca91504bd523",
    strip_prefix = "rules_cc-0.2.13",
    urls = ["https://github.com/bazelbuild/rules_cc/archive/refs/tags/0.2.13.tar.gz"],
)

load("@rules_cc//cc:extensions.bzl", "compatibility_proxy_repo")

compatibility_proxy_repo()

load("//third_party/zk_dtypes:workspace.bzl", zk_dtypes = "repo")

zk_dtypes()

# Initialize hermetic Python
load("@zk_dtypes//third_party/py:python_init_rules.bzl", "python_init_rules")

python_init_rules()

load("@zk_dtypes//third_party/py:python_init_repositories.bzl", "python_init_repositories")

python_init_repositories(
    requirements = {
        "3.11": "//:requirements_lock_3_11.txt",
    },
)

load("@zk_dtypes//third_party/py:python_init_toolchains.bzl", "python_init_toolchains")

python_init_toolchains()

load("@zk_dtypes//third_party/py:python_init_pip.bzl", "python_init_pip")

python_init_pip()

load("@pypi//:requirements.bzl", "install_deps")

install_deps()

load("@zk_dtypes//bazel:zk_dtypes_deps.bzl", "zk_dtypes_deps")

zk_dtypes_deps()

load("@rules_java//java:rules_java_deps.bzl", "rules_java_dependencies")

rules_java_dependencies()

load("@rules_java//java:repositories.bzl", "rules_java_toolchains")

rules_java_toolchains()

load("//bazel:prime_ir_deps.bzl", "prime_ir_deps")

prime_ir_deps()

load("//third_party/llvm-project:workspace.bzl", "LLVM_COMMIT", "LLVM_PATCHES", "LLVM_SHA256")

http_archive(
    name = "llvm-raw",
    build_file_content = "# empty",
    patch_args = ["-p1"],
    patches = LLVM_PATCHES,
    sha256 = LLVM_SHA256,
    strip_prefix = "llvm-project-" + LLVM_COMMIT,
    urls = ["https://github.com/llvm/llvm-project/archive/{commit}.tar.gz".format(commit = LLVM_COMMIT)],
)

# Uncomment this (and comment the llvm-raw http_archive above) when following the
# llvm patch workflow from CONTRIBUTING.md to point Bazel at a local clone.
# new_local_repository(
#     name = "llvm-raw",
#     build_file_content = "# empty",
#     path = "../llvm-project",
# )

# This is needed since https://reviews.llvm.org/D143344.
# Not sure if it's a bug or a feature, but it doesn't hurt to keep an additional
# dependency here.
http_archive(
    name = "llvm_zstd",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zstd.BUILD",
    sha256 = "7c42d56fac126929a6a85dbc73ff1db2411d04f104fae9bdea51305663a83fd0",
    strip_prefix = "zstd-1.5.2",
    urls = [
        "https://github.com/facebook/zstd/releases/download/v1.5.2/zstd-1.5.2.tar.gz",
    ],
)

# This is needed since https://reviews.llvm.org/D143320
# Not sure if it's a bug or a feature, but it doesn't hurt to keep an additional
# dependency here.
http_archive(
    name = "llvm_zlib",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zlib-ng.BUILD",
    sha256 = "e36bb346c00472a1f9ff2a0a4643e590a254be6379da7cddd9daeb9a7f296731",
    strip_prefix = "zlib-ng-2.0.7",
    urls = [
        "https://github.com/zlib-ng/zlib-ng/archive/refs/tags/2.0.7.zip",
    ],
)

load("@llvm-raw//utils/bazel:configure.bzl", "llvm_configure")

llvm_configure(name = "llvm-project")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
http_archive(
    name = "hedron_compile_commands",
    patch_args = ["-p1"],
    patches = ["@zk_dtypes//third_party/bazel-compile-commands-extractor:allow_header_as_a_source_file.patch"],
    strip_prefix = "bazel-compile-commands-extractor-ed994039a951b736091776d677f324b3903ef939",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/ed994039a951b736091776d677f324b3903ef939.tar.gz",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()

http_archive(
    name = "rules_cuda",
    strip_prefix = "rules_cuda-b11b7e499550954ad396ad41aac597b380ce2957",
    urls = ["https://github.com/bazel-contrib/rules_cuda/archive/b11b7e499550954ad396ad41aac597b380ce2957.tar.gz"],
)

load("@rules_cuda//cuda:repositories.bzl", "rules_cuda_toolchains")

# NOTE(chokobole): Calling `rules_cuda_dependencies()` creates a conflict
# by adding redundant `bazel_skylib` and platforms dependencies.
# This version mismatch (particularly for platforms) breaks the rules_python build.
# For more details, see:
# https://github.com/bazel-contrib/rules_cuda/blob/b11b7e4/cuda/private/repositories.bzl#L406-L426

rules_cuda_toolchains(register_toolchains = True)
