# Copyright 2025 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_cuda//cuda:defs.bzl", "requires_cuda")
load("//bazel:lit.bzl", "glob_lit_tests")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "libruntime_functions.so",
    testonly = True,
    linkshared = True,
    linkstatic = False,
    deps = [":RuntimeFunctions"],
)

cc_library(
    name = "RuntimeFunctions",
    testonly = True,
    srcs = ["RuntimeFunctions.cpp"],
    hdrs = ["RuntimeFunctions.h"],
    deps = [
        "@llvm-project//mlir:mlir_runner_utils",
        "@zk_dtypes//zk_dtypes:all_types",
        "@zk_dtypes//zk_dtypes:big_int",
    ],
    alwayslink = True,
)

# Bundle together all of the test utilities that are used by tests.
filegroup(
    name = "test_utilities",
    testonly = True,
    data = [
        "bn254_ec_defs.mlir",
        "bn254_ec_mont_defs.mlir",
        "bn254_ec_utils.mlir",
        "bn254_field_defs.mlir",
        "default_print_utils.mlir",
        "poseidon2.mlir",
        "poseidon2_packed.mlir",
        ":libruntime_functions.so",
        ":lit.cfg.py",
        "//tools:prime-ir-opt",
        "@llvm-project//llvm:FileCheck",
        "@llvm-project//llvm:lit",
        "@llvm-project//llvm:not",
        "@llvm-project//mlir:libmlir_runner_utils.so",
        "@llvm-project//mlir:mlir-runner",
    ],
)

filegroup(
    name = "test_utilities_cuda",
    testonly = True,
    data = [
        "//utils/cuda:cudaRuntimeUtils.so",
        "@llvm-project//mlir:libmlir_cuda_runtime.so",
    ],
    target_compatible_with = requires_cuda(),
)

glob_lit_tests(
    name = "all_tests",
    data = [":test_utilities"],
    # Note: the driver argument is silently ignored for the OSS version of this
    # macro, replacing it with a standard invocation of lit whose config is in
    # lit.cfg.py
    driver = "//tests:run_lit.sh",
    exclude = [
        "bn254_ec_defs.mlir",
        "bn254_ec_mont_defs.mlir",
        "bn254_ec_mont_utils.mlir",
        "bn254_ec_utils.mlir",
        "bn254_field_defs.mlir",
        "default_print_utils.mlir",
        "poseidon2.mlir",
        "poseidon2_packed.mlir",
    ],
    test_file_exts = ["mlir"],
)

exports_files(
    [
        "run_lit.sh",
    ],
)
