# Copyright 2025 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//bazel:lit.bzl", "glob_lit_tests")
load("//bazel:prime_ir_cc.bzl", "prime_ir_cc_binary", "prime_ir_cc_library")

package(
    default_visibility = ["//visibility:public"],
)

prime_ir_cc_binary(
    name = "libruntime_functions.so",
    testonly = True,
    linkshared = True,
    linkstatic = False,
    deps = [":RuntimeFunctions"],
)

prime_ir_cc_library(
    name = "RuntimeFunctions",
    testonly = True,
    srcs = ["RuntimeFunctions.cpp"],
    hdrs = ["RuntimeFunctions.h"],
    deps = [
        "@llvm-project//mlir:mlir_runner_utils",
        "@zk_dtypes//zk_dtypes:all_types",
        "@zk_dtypes//zk_dtypes:big_int",
    ],
    alwayslink = True,
)

# Copy shared BN254 type defs into tests/ so LIT %S-relative paths work.
genrule(
    name = "bn254_defs_copy",
    srcs = ["//prime_ir/Runtime:bn254_defs.mlir"],
    outs = ["bn254_defs.mlir"],
    cmd = "cp $< $@",
)

# Copy shared Ed25519 type defs into tests/ so LIT %S-relative paths work.
genrule(
    name = "ed25519_defs_copy",
    srcs = ["//prime_ir/Runtime:ed25519_defs.mlir"],
    outs = ["ed25519_defs.mlir"],
    cmd = "cp $< $@",
)

# Bundle together all of the test utilities that are used by tests.
filegroup(
    name = "test_utilities",
    testonly = True,
    data = [
        "bn254_ec_helpers.mlir",
        "bn254_ec_mont_helpers.mlir",
        "bn254_ec_utils.mlir",
        "default_print_utils.mlir",
        ":bn254_defs.mlir",
        ":ed25519_defs.mlir",
        ":libruntime_functions.so",
        ":lit.cfg.py",
        "//tools:prime-ir-opt",
        "@llvm-project//llvm:FileCheck",
        "@llvm-project//llvm:lit",
        "@llvm-project//llvm:not",
        "@llvm-project//mlir:libmlir_runner_utils.so",
        "@llvm-project//mlir:mlir-runner",
    ],
)

glob_lit_tests(
    name = "all_tests",
    data = [":test_utilities"],
    # Note: the driver argument is silently ignored for the OSS version of this
    # macro, replacing it with a standard invocation of lit whose config is in
    # lit.cfg.py
    driver = "//tests:run_lit.sh",
    exclude = [
        "bn254_ec_helpers.mlir",
        "bn254_ec_mont_helpers.mlir",
        "bn254_ec_utils.mlir",
        "default_print_utils.mlir",
    ],
    test_file_exts = ["mlir"],
)

exports_files(
    [
        "run_lit.sh",
    ],
)
