load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "zkir-lsp",
    srcs = ["zkir-lsp.cpp"],
    deps = [
        "//zkir/Dialect/EllipticCurve/IR:EllipticCurve",
        "//zkir/Dialect/Field/IR:Field",
        "//zkir/Dialect/ModArith/IR:ModArith",
        "//zkir/Dialect/Poly/IR:Poly",
        "//zkir/Dialect/TensorExt/IR:TensorExt",
        "@llvm-project//mlir:AllExtensions",
        "@llvm-project//mlir:AllPassesAndDialects",
        "@llvm-project//mlir:MlirLspServerLib",
    ],
)

cc_binary(
    name = "zkir-opt",
    srcs = ["zkir-opt.cpp"],
    deps = [
        "//zkir/Dialect/EllipticCurve/Conversions/EllipticCurveToField",
        "//zkir/Dialect/EllipticCurve/Conversions/EllipticCurveToLLVM",
        "//zkir/Dialect/EllipticCurve/IR:EllipticCurve",
        "//zkir/Dialect/Field/Conversions/ExtFieldToLLVM",
        "//zkir/Dialect/Field/Conversions/FieldToModArith",
        "//zkir/Dialect/Field/IR:Field",
        "//zkir/Dialect/Field/Pipelines:Passes",
        "//zkir/Dialect/ModArith/Conversions/ModArithToArith",
        "//zkir/Dialect/ModArith/IR:ModArith",
        "//zkir/Dialect/Poly/Conversions/PolyToField",
        "//zkir/Dialect/Poly/IR:Poly",
        "//zkir/Dialect/TensorExt/Conversions/TensorExtToTensor",
        "//zkir/Dialect/TensorExt/IR:TensorExt",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:AllExtensions",
        "@llvm-project//mlir:AllPassesAndDialects",
        "@llvm-project//mlir:GPUToLLVMIRTranslation",
        "@llvm-project//mlir:LLVMToLLVMIRTranslation",
        "@llvm-project//mlir:MlirOptLib",
        "@llvm-project//mlir:NVVMToLLVMIRTranslation",
        "@llvm-project//mlir:TosaDialect",
    ],
)
