# Copyright 2025 The ZKIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "zkir-lsp",
    srcs = ["zkir-lsp.cpp"],
    deps = [
        "//zkir/Dialect/EllipticCurve/IR:EllipticCurve",
        "//zkir/Dialect/Field/IR:Field",
        "//zkir/Dialect/ModArith/IR:ModArith",
        "//zkir/Dialect/Poly/IR:Poly",
        "//zkir/Dialect/TensorExt/IR:TensorExt",
        "@llvm-project//mlir:AllExtensions",
        "@llvm-project//mlir:AllPassesAndDialects",
        "@llvm-project//mlir:MlirLspServerLib",
    ],
)

cc_binary(
    name = "zkir-opt",
    srcs = ["zkir-opt.cpp"],
    deps = [
        "//zkir/Dialect/ArithExt/Conversions/SpecializeArithToAVX",
        "//zkir/Dialect/EllipticCurve/Conversions/EllipticCurveToField",
        "//zkir/Dialect/EllipticCurve/Conversions/EllipticCurveToLLVM",
        "//zkir/Dialect/EllipticCurve/IR:EllipticCurve",
        "//zkir/Dialect/Field/Conversions/ExtFieldToLLVM",
        "//zkir/Dialect/Field/Conversions/FieldToModArith",
        "//zkir/Dialect/Field/IR:Field",
        "//zkir/Dialect/Field/Pipelines:Passes",
        "//zkir/Dialect/ModArith/Conversions/ModArithToArith",
        "//zkir/Dialect/ModArith/IR:ModArith",
        "//zkir/Dialect/Poly/Conversions/PolyToField",
        "//zkir/Dialect/Poly/IR:Poly",
        "//zkir/Dialect/TensorExt/Conversions/TensorExtToTensor",
        "//zkir/Dialect/TensorExt/IR:TensorExt",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:AllExtensions",
        "@llvm-project//mlir:AllPassesAndDialects",
        "@llvm-project//mlir:GPUToLLVMIRTranslation",
        "@llvm-project//mlir:LLVMToLLVMIRTranslation",
        "@llvm-project//mlir:MlirOptLib",
        "@llvm-project//mlir:NVVMToLLVMIRTranslation",
        "@llvm-project//mlir:TosaDialect",
    ],
)
