# Copyright 2025 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "prime-ir-lsp",
    srcs = ["prime-ir-lsp.cpp"],
    deps = [
        "//prime_ir/Dialect/EllipticCurve/IR:EllipticCurve",
        "//prime_ir/Dialect/Field/IR:Field",
        "//prime_ir/Dialect/ModArith/IR:ModArith",
        "//prime_ir/Dialect/Poly/IR:Poly",
        "//prime_ir/Dialect/TensorExt/IR:TensorExt",
        "@llvm-project//mlir:AllExtensions",
        "@llvm-project//mlir:AllPassesAndDialects",
        "@llvm-project//mlir:MlirLspServerLib",
    ],
)

cc_binary(
    name = "prime-ir-opt",
    srcs = ["prime-ir-opt.cpp"],
    deps = [
        "//prime_ir/Dialect/ArithExt/Conversions/SpecializeArithToAVX",
        "//prime_ir/Dialect/EllipticCurve/Conversions/EllipticCurveToField",
        "//prime_ir/Dialect/EllipticCurve/Conversions/EllipticCurveToLLVM",
        "//prime_ir/Dialect/EllipticCurve/IR:EllipticCurve",
        "//prime_ir/Dialect/Field/Conversions/ExtFieldToLLVM",
        "//prime_ir/Dialect/Field/Conversions/FieldToModArith",
        "//prime_ir/Dialect/Field/IR:Field",
        "//prime_ir/Dialect/Field/Pipelines:Passes",
        "//prime_ir/Dialect/ModArith/Conversions/ModArithToArith",
        "//prime_ir/Dialect/ModArith/IR:ModArith",
        "//prime_ir/Dialect/Poly/Conversions/PolyToField",
        "//prime_ir/Dialect/Poly/IR:Poly",
        "//prime_ir/Dialect/TensorExt/Conversions/TensorExtToTensor",
        "//prime_ir/Dialect/TensorExt/IR:TensorExt",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:AllExtensions",
        "@llvm-project//mlir:AllPassesAndDialects",
        "@llvm-project//mlir:GPUToLLVMIRTranslation",
        "@llvm-project//mlir:LLVMToLLVMIRTranslation",
        "@llvm-project//mlir:MlirOptLib",
        "@llvm-project//mlir:NVVMToLLVMIRTranslation",
        "@llvm-project//mlir:TosaDialect",
    ],
)
