load("//benchmark:benchmark.bzl", "zkir_benchmark_test")

zkir_benchmark_test(
    name = "mul_benchmark_test",
    mlir_src = "mul_benchmark.mlir",
    tags = ["manual"],
    test_src = ["mul_benchmark_test.cc"],
    zkir_opt_flags = ["-poly-to-llvm"],
    deps = [
        "//benchmark:BenchmarkUtils",
    ],
)
