# Copyright 2025 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//benchmark:benchmark.bzl", "prime_ir_benchmark", "prime_ir_mlir_cc_import")

prime_ir_mlir_cc_import(
    name = "mul_ciface",
    mlir_src = "mul_benchmark.mlir",
    prime_ir_opt_flags = [
        "-poly-to-field",
        "-field-to-llvm",
    ],
)

prime_ir_benchmark(
    name = "mul_benchmark_test",
    srcs = ["mul_benchmark_test.cc"],
    deps = [
        ":mul_ciface",
        "@llvm-project//mlir:ExecutionEngine",
        "@llvm-project//mlir:Support",
        "@zk_dtypes//zk_dtypes:bn254_fr",
    ],
)
