# Copyright 2025 The ZKIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("//benchmark:benchmark.bzl", "msm_extra_replacements", "zkir_benchmark", "zkir_mlir_cc_import", "zkir_mlir_template_parameterized")

# Build flag to specify MSM size as log2(size)
# Usage: bazel build --//benchmark/msm:msm_log_size=20
string_flag(
    name = "msm_log_size",
    build_setting_default = "16",
    values = ["12", "14", "16", "18", "20", "22"],
)

zkir_mlir_template_parameterized(
    name = "msm_benchmark_mlir",
    default_log_size = 16,
    extra_replacements_fn = msm_extra_replacements,
    log_sizes = [12, 14, 16, 18, 20, 22],
    size_flag = ":msm_log_size",
    template_src = "msm_benchmark.mlir.template",
)

zkir_mlir_cc_import(
    name = "msm_ciface",
    mlir_src = ":msm_benchmark_mlir",
    zkir_opt_flags = [
        "-elliptic-curve-to-field",
        "-field-to-llvm=enable-openmp=true",
    ],
)

zkir_benchmark(
    name = "msm_benchmark_test",
    srcs = ["msm_benchmark_test.cc"],
    deps = [
        ":msm_ciface",
        "@llvm-project//mlir:ExecutionEngine",
        "@llvm-project//mlir:Support",
        "@local_config_omp//:omp",
        "@zk_dtypes//zk_dtypes:bn254_fr",
        "@zk_dtypes//zk_dtypes:bn254_g1",
    ],
)
