# Copyright 2025 The ZKIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//benchmark:benchmark.bzl", "zkir_benchmark", "zkir_mlir_cc_import")

zkir_mlir_cc_import(
    name = "poseidon2_ciface",
    mlir_src = "poseidon2.mlir",
    zkir_opt_flags = [
        "-field-to-llvm",
    ],
)

zkir_mlir_cc_import(
    name = "poseidon2_packed_ciface",
    llc_flags = [
        "-mcpu=native",
    ],
    mlir_src = "poseidon2_packed.mlir",
    zkir_opt_flags = [
        "-field-to-llvm=specialize-avx",
        "-convert-vector-to-llvm",
    ],
)

zkir_benchmark(
    name = "poseidon2_benchmark",
    srcs = ["poseidon2_benchmark.cc"],
    deps = [
        ":poseidon2_ciface",
        ":poseidon2_packed_ciface",
        "@llvm-project//mlir:ExecutionEngine",
        "@llvm-project//mlir:Support",
    ],
)
